# simple-image-viewer

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  decode_gdiplus.cpp  decode_gdiplus.h  decode_jpeg.cpp  decode_jpeg.h  decode_wic.cpp  decode_wic.h  image.h  main.cpp  vcpkg.json
images/: 1190460_20251227154334_1.avif
